--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "eek-solar-app": "file:",
     "mongodb": "^6.14.2"
